# syndicode

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  app_config.toml  client.just  db.just  docker-compose.yaml  docker.just  grpcurl.just  infra.just  justfile  proto.just  server.just  syndicode.db  syndicode.db-wal  web.just
server/: Cargo.toml  Dockerfile  README.md  build.rs
server/migrations/: 20250322090815_introduction.sql
server/proto/: control.proto  economy.proto  warfare.proto
server/src/: engine.rs  lib.rs  main.rs  presentation.rs
server/src/domain/model/: control.rs  economy.rs  warfare.rs
server/src/domain/repository/: control.rs  economy.rs  warfare.rs
server/src/infrastructure/: postgres.rs  sqlite.rs
server/src/infrastructure/postgres/: control.rs  economy.rs  warfare.rs
server/src/infrastructure/sqlite/: control.rs  economy.rs  warfare.rs
server/src/presentation/: common.rs  control.rs  economy.rs  middleware.rs  warfare.rs
server/src/presentation/proto/: control.rs  economy.rs  warfare.rs
server/src/service/: control.rs  economy.rs  error.rs  warfare.rs
server/tests/: e2e.rs
syndicode-client/: Cargo.toml  build.rs
syndicode-client/src/: application.rs  config.rs  domain.rs  infrastructure.rs  lib.rs  logging.rs  main.rs  presentation.rs
syndicode-client/src/application/: auth.rs  game.rs
syndicode-client/src/application/admin/: create_user.rs  delete_user.rs  get_user.rs
syndicode-client/src/application/auth/: get_current_user.rs  login.rs  register.rs  resend.rs  verifiy.rs
syndicode-client/src/application/game/: acquire_listed_business.rs  get_corporation.rs  query_business_listings.rs  stream.rs
syndicode-client/src/domain/: admin.rs  auth.rs  game.rs  response.rs
syndicode-client/src/domain/auth/: repository.rs
syndicode-client/src/infrastructure/: admin.rs  auth.rs  game.rs  grpc.rs
syndicode-client/src/presentation/: app.rs  event.rs  input.rs  reader.rs  stream.rs  theme.rs  ui.rs  widget.rs
syndicode-client/src/presentation/input/: exit.rs  list_detail.rs  main.rs  response_detail.rs  service_detail.rs  utils.rs
syndicode-client/src/presentation/widget/: editing.rs  exit.rs  main_layout.rs  response_detail.rs  response_list.rs  service.rs  service_list.rs  vim.rs
syndicode-client/tests/: admin.rs  auth.rs  common.rs  game.rs
syndicode-proto/: Cargo.toml  build.rs
syndicode-proto/buffers/: control.proto  economy.proto  warfare.proto
syndicode-proto/buffers/economy/v1/: economy.proto
syndicode-proto/buffers/interface/v1/: admin.proto  auth.proto  economy.proto  game.proto  interface.proto  shared.proto
syndicode-proto/buffers/warfare/v1/: warfare.proto
syndicode-proto/src/: control.rs  economy.rs  lib.rs  syndicode_economy_v1.rs  syndicode_interface_v1.rs  syndicode_warfare_v1.rs  warfare.rs
syndicode-server/: Cargo.toml  Dockerfile
syndicode-server/migrations/: 20250322090815_foundation.sql  20250322090815_introduction.sql  20250422171003_auth.sql  20250422171019_economy.sql  20250422171140_warfare.sql
syndicode-server/src/: application.rs  cli.rs  config.rs  domain.rs  engine.rs  infrastructure.rs  lib.rs  main.rs  presentation.rs  service.rs  startup.rs  utils.rs
syndicode-server/src/application/: action.rs  admin.rs  auth.rs  bootstrap.rs  crypto.rs  economy.rs  error.rs  game.rs  get_game_tick.rs  init.rs  leader.rs  limitation.rs  migration.rs  ports.rs  processor.rs  uow.rs  warfare.rs
syndicode-server/src/application/admin/: bootstrap.rs  bootstrap_admin.rs  create_user.rs  delete_user.rs  get_user.rs
syndicode-server/src/application/auth/: get_user.rs  login.rs  register_user.rs  resend_verification.rs  verify_user.rs
syndicode-server/src/application/economy/: acquire_listed_business.rs  bootstrap.rs  bootstrap_economy.rs  get_corporation.rs  list_building_ownerships.rs  list_buildings.rs  list_business_listings.rs  list_business_offers.rs  list_businesses.rs  list_corporations.rs  list_markets.rs  query_building_ownerships.rs  query_buildings.rs  query_business_listings.rs  query_businesses.rs  update_corporation.rs
syndicode-server/src/application/game/: get_game_tick.rs
syndicode-server/src/application/ports/: action_queue.rs  crypto.rs  downloader.rs  game_tick.rs  init.rs  leader.rs  limiter.rs  migration.rs  outcome.rs  processor.rs  puller.rs  queue.rs  queuer.rs  restorer.rs  results.rs  uow.rs  verification.rs
syndicode-server/src/application/warfare/: list_units.rs  list_units_by_corporation.rs  list_units_by_user.rs  spawn_unit.rs
syndicode-server/src/domain/: corporation.rs  economy.rs  model.rs  outcome.rs  repository.rs  simulation.rs  user.rs
syndicode-server/src/domain/corporation/: model.rs  repository.rs
syndicode-server/src/domain/economy/: building.rs
syndicode-server/src/domain/model/: control.rs  economy.rs  interface.rs  warfare.rs
syndicode-server/src/domain/ports/: simulation.rs
syndicode-server/src/domain/repository/: control.rs  corporation.rs  economy.rs  unit.rs  user.rs  warfare.rs
syndicode-server/src/domain/simulation/: game_state.rs  handlers.rs  processors.rs  saga.rs
syndicode-server/src/domain/unit/: model.rs  repository.rs
syndicode-server/src/domain/user/: model.rs  repository.rs
syndicode-server/src/domain/user_verify/: model.rs  repository.rs
syndicode-server/src/infrastructure/: crypto.rs  email.rs  http.rs  postgres.rs  restorer.rs  valkey.rs
syndicode-server/src/infrastructure/crypto/: claims.rs  jwt.rs  password.rs
syndicode-server/src/infrastructure/email/: colors.rs
syndicode-server/src/infrastructure/postgres/: control.rs  corporation.rs  economy.rs  game_tick.rs  init.rs  interface.rs  migration.rs  uow.rs  (+4 more)
syndicode-server/src/presentation/: admin.rs  auth.rs  broadcaster.rs  common.rs  control.rs  economy.rs  error.rs  game.rs  middleware.rs  warfare.rs
syndicode-server/src/service/: control.rs  economy.rs  error.rs  interface.rs  warfare.rs
syndicode-server/src/startup/: bootstrap.rs  engine.rs  leader.rs  logging.rs  provider.rs  server.rs  services.rs  state.rs
(+229 files in other folders)
