[workspace]
resolver = "2"
members = [
    "syndicode-proto",
    "syndicode-client",
    "syndicode-server",
]


[profile.dev]
debug = true

[profile.release]
lto = true

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.13.0"
uuid = { version = "1.16.0", features = ["v7", "serde"] }
