[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = {workspace = true}
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
prost = {workspace = true}
tonic-reflection = "0.12.3"
uuid = { version = "1.16.0", features = ["v7"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
thiserror = "2.0.12"
sqlx = { version = "0.8.3", features = [ "sqlite", "runtime-tokio", "tls-native-tls", "uuid" ] }
argon2 = { version = "0.5.3", features = ["simple"] }
jsonwebtoken = "9.3.1"
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
tower = "0.5.2"
http = "1.3.1"
rand = "0.9.0"

[build-dependencies]
tonic-build = "*"
