[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.13.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
prost = "0.13.5"
tonic-reflection = "0.13.0"
uuid = { version = "1.16.0", features = ["v7"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0.97"
thiserror = "2.0.12"
sqlx = { version = "0.8.3", features = [ "postgres","macros", "runtime-tokio", "tls-native-tls", "uuid" ] }
jsonwebtoken = "9.3.1"
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
tower = "0.5.2"
http = "1.3.1"
argon2 = { version = "0.5", features = ["password-hash"] }
rand_core = "0.9"

[build-dependencies]
tonic-build = { version = "0.13.0" }
