[package]
name = "syndicode-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = { workspace = true }
syndicode-proto = { path = "../syndicode-proto" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { version = "0.13.1", default-features = false, features = ["transport", "codegen", "tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
ratatui = "0.29.0"
tui-textarea = "0.7.0"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "6.0.0"
lazy_static = "1.5.0"
color-eyre = "0.6.4"
crossterm = { version = "0.29", features = ["event-stream"] }

[dev-dependencies]
serial_test = "3.2.0"
