[package]
name = "syndicode-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = "0.13.1"

[build-dependencies]
tonic-build = { version = "0.13.1" }
