[package]
name = "syndicode-server"
version = "0.1.0"
edition = "2021"

[dependencies]
syndicode-proto = { path = "../syndicode-proto/" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
tonic-health = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0.97"
thiserror = "2.0.12"
sqlx = { version = "0.8.3", features = [ "postgres","macros", "runtime-tokio", "tls-native-tls", "uuid" ] }
jsonwebtoken = "9.3.1"
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
tower = "0.5.2"
http = "1.3.1"
argon2 = { version = "0.5", features = ["password-hash"] }
rand_core = "0.9"
urlencoding = "2.1.3"
validator = { version = "0.20", features = ["derive"] }
