[package]
name = "syndicode-server"
version = "0.1.0"
edition = "2021"

[dependencies]
syndicode-proto = { path = "../syndicode-proto/" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
futures = "0.3.31"
prost-types = "0.13.5"
uuid = { workspace = true }
tonic-health = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0.97"
thiserror = "2.0.12"
sqlx = { version = "0.8.3", features = [ "postgres", "time", "macros", "runtime-tokio", "tls-native-tls", "uuid" ] }
time = "0.3.41"
jsonwebtoken = "9.3.1"
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
email_address = "0.2.9"
rmp-serde = "1.3.0"
tower = "0.5.2"
http = "1.3.1"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = "0.9.1"
rand_core = "0.9"
urlencoding = "2.1.3"
redis = { version = "0.30.0", features = ["tokio-comp"] }
lazy_static = "1.5.0"
bon = "3.6.1"
lettre = { version = "0.11.15", features = ["tokio1-native-tls"] }

[dev-dependencies]
mockall = "0.13.1"
tokio = { version = "1.44.2", features = ["test-util"] }
