[package]
name = "syndicode-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = { workspace = true }
syndicode-proto = { path = "../syndicode-proto/" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tonic-health = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
sqlx = { version = "0.8.3", features = [ "postgres", "time", "macros", "runtime-tokio", "tls-native-tls", "uuid" ] }
jsonwebtoken = "9.3.1"
dashmap = "6.1.0"
email_address = "0.2.9"
rmp-serde = "1.3.0"
tower = "0.5.2"
http = "1.3.1"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = "0.9.1"
rand_core = "0.9"
urlencoding = "2.1.3"
redis = { version = "0.32.0", features = ["tokio-comp"] }
lazy_static = "1.5.0"
lettre = { version = "0.11.15", features = ["tokio1-native-tls"] }
parquet = "55.1.0"
geo = "0.30.0"
rstar = "0.12.2"
rayon = "1.10.0"
arrow = "55.1.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
wkt = "0.14.0"
geozero = { version = "0.14", features = ["with-postgis-sqlx"] }

[dev-dependencies]
mockall = "0.13.1"
tokio = { version = "1.44.2", features = ["test-util"] }
